refacto des types de demandes, ajout d'un endpoint référentiel
